updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am 44 years old and I am starting my career over. I have a BS in geology from Southern Illinois University</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born and raised in the suburbs of Chicago, IL</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Collecting anything to do with Star Wars, autographs, video games, camping, hiking, and fishing.</p>
+      <h1>What's your dreamjob?</h1>
+      <p>I'm just begining as a software developer so right now pretty much anything that pays well and allows me to work remotely.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Minooka, IL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Since I was young, I have always enjoyed working with computers.  I learned how to program BASIC in grade school on the Apple IIe.
+        In college, I had my own website selling Star Wars toys to fund my nightlife.  I have no idea why I chose geology over computer science, but there's no time like the present.
+      </p>
     </section>
 
     <footer id="footer">
